--- a/index.html
+++ b/index.html
@@ -9,10 +9,21 @@
 
 <nav>
     <img src="images/Rocket_League_Icon.png" alt="Rocket League Logo">
-    <a href="#" target="_blank"><div class = "items">Home</div></a>
-    <a href="#" target="_blank"><div class = "items">About</div></a>
-    <a href="#" target="_blank"><div class = "items">Contacts</div></a>
-    <a href="#" target="_blank"><div class = "items">Log in</div></a>
+    <a href="#" target="_blank"><div class = "items">SEASON 11</div></a>
+    <a href="#" target="_blank"><div class = "items">ROCKET PASS</div></a>
+    <a href="#" target="_blank"><div class = "items">NEWS</div></a>
+    <a href="#" target="_blank"><div class = "items">SUPPORT</div></a>
+
+
+    
+    <img src="images/search-bar-magnifying-glass-icon.jpg" alt="Search bar icon">
+    <img src="images/white_share_icon.png" alt="Share icon">
+    <img src="images/Net_Working_Icon.png" alt="Networking icon">
+
+    <div>
+    <img id= "playbutton" src="images/playnow-button.png" alt="Play Now button">
+    </div>
+    
 </nav>
 
 </body>
