Fully Finished Navigation Bar

--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
 <body>
 
 <nav>
-    <img src="images/Rocket_League_Icon.png" alt="Rocket League Logo">
-    <a href="#" target="_blank"><div class = "items">SEASON 11</div></a>
-    <a href="#" target="_blank"><div class = "items">ROCKET PASS</div></a>
-    <a href="#" target="_blank"><div class = "items">NEWS</div></a>
-    <a href="#" target="_blank"><div class = "items">SUPPORT</div></a>
-
-
+    <img src="images/Rocket_League_Logo.png" alt="Rocket League Logo">
+    <img src="images/Rocket_League_Text.webp" alt="Rocket League text">
+   
+    <a href="#" target="_blank"><div class = "items1">SEASON 11</div></a>
     
+    <a href="#" target="_blank"><div class = "items2">ROCKET PASS</div></a>
+   
+    <a href="#" target="_blank"><div class = "items1">NEWS</div></a>
+   
+    <a href="#" target="_blank"><div class = "items2">SUPPORT</div></a>
+   
+
+
     <img src="images/search-bar-magnifying-glass-icon.jpg" alt="Search bar icon">
     <img src="images/white_share_icon.png" alt="Share icon">
     <img src="images/Net_Working_Icon.png" alt="Networking icon">
@@ -23,8 +28,29 @@
     <div>
     <img id= "playbutton" src="images/playnow-button.png" alt="Play Now button">
     </div>
-    
+
 </nav>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<div id="TopHeader">
+<p> CELEBRATE SOCCAR WITH SEASON 11</p>
+</div>
+
+
+<div id="BottomLine">
+<p>Unleash the Nissan Silvia S13, earn Rocket Pass rewards, 
+    and celebrate soccar in the new Estadio Vida Arena.</p>
+</div>
+
+
 
 </body>
 </html>
