Final Update Project Submission

--- a/index.html
+++ b/index.html
@@ -37,19 +37,15 @@
 <br>
 <br>
 <br>
-<br>
-<br>
 
+<div id="big_div">
 <div id="TopHeader">
-<p> CELEBRATE SOCCAR WITH SEASON 11</p>
-</div>
-
-
-<div id="BottomLine">
-<p>Unleash the Nissan Silvia S13, earn Rocket Pass rewards, 
+<p> CELEBRATE SOCCAR WITH SEASON 11  <br> <br> Unleash the Nissan Silvia S13, earn Rocket Pass rewards, 
     and celebrate soccar in the new Estadio Vida Arena.</p>
 </div>
 
+<iframe width="565" height="315" src="https://www.youtube.com/embed/5_Qq_yiV3Ug" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div>
 
 
 </body>
