Final Update Project Submission

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <nav>
     <img src="images/Rocket_League_Logo.png" alt="Rocket League Logo">
-    <img src="images/Rocket_League_Text.webp" alt="Rocket League text">
+    <img src="images/Rocket_League_Text.webp" alt="Rocket League Text">
    
     <a href="#" target="_blank"><div class = "items1">SEASON 11</div></a>
     
